# cource_work_sql

./: README.md  main.py  pyproject.toml  queries.sql
src/: api_hh.py  dbmanager.py
