[tool.poetry]
name = "cource-work-sql"
version = "0.1.0"
description = ""
authors = ["Xena Ship <shipxena@gmail.com>"]
readme = "README.md"
packages = [{include = "cource_work_sql"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
